Fixed mobile layout bugs

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 #background {
   flex: 1;
-  background-color: black
+  background-color: black;
 }
 
 footer {
