--- a/src/components/NavbarStyles.css
+++ b/src/components/NavbarStyles.css
@@ -8,7 +8,6 @@
     padding-left: 30px;
     font-family:'Courier New', Courier, monospace;
     color: white;
-
 }
 
 #nav ul{
@@ -16,7 +15,8 @@
     display: flex;
     gap: 30px;
     padding-right: 30px;
-    
+    margin: 0;
+    align-items: center;
 }
 
 #nav ul a{
@@ -27,6 +27,21 @@
     font-family:'Courier New', Courier, monospace;
 }
 
+#nav h1 a{
+    text-decoration: none;
+}
+
 #nav ul a:hover{
     color: rgb(199, 197, 197);
+}
+
+@media screen and (max-width: 576px) {
+    #home {
+        visibility: hidden;
+    }
+    #nav h1 a{
+        padding: 5px;
+        border: 3px solid white;
+    }
+    
 }
