--- a/src/components/ProjectsStyles.css
+++ b/src/components/ProjectsStyles.css
@@ -7,7 +7,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding-top: 30px;
 }
 
 #list h1 {
@@ -56,15 +55,22 @@
     width: calc(100% + 5px);
     transition: opacity 0.3s;
     flex-direction: column;
+    text-align: center;
 }
 
 @media screen and (max-width: 576px) {
     .proj {
         border: none;
+        height: 250px;
     }
 
     .description {
         width: 100%;
+        height: 250px;
+    }
+
+    #list h1 {
+        font-size: 40px;
     }
 }
 
